# sve

./: CMakeLists.txt  LICENSE  Readme.md
include/sve/: sve.hpp
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  fft.cpp
tests/unit/: CMakeLists.txt  addition.cpp  copy_from_to.cpp  dummy.cpp  fft.cpp  index_series.cpp  iota.cpp  load_store.cpp  main.hpp  permute.cpp  random.cpp  reduce.cpp  scan.cpp  utility.hpp
